<?xml version="1.0"?>
<package>
  <name>freyja_configfiles</name>
  <version>0.1.0</version>
  <description>The freyja package containing launch and config files</description>

  <maintainer email="ashankar@cse.unl.edu">aj</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>

</package>
