<?xml version="1.0"?>
<package format="3">
  <name>freyja_configfiles</name>
  <version>2.0.0</version>
  <description>The freyja_configfiles package</description>

  <maintainer email="ashankar@cse.unl.edu">aj</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
