<?xml version="1.0"?>
<package format="3">
  <name>freyja_examples</name>
  <version>0.0.0</version>
  <description>ROS2 Trajectory Examples</description>
  <maintainer email="hw527@cam.ac.uk">Peter Woo</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

	<depend>rclcpp</depend>
	<depend>std_msgs</depend>
	<depend>std_srvs</depend>
	<depend>freyja_msgs</depend>

	<export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
