<?xml version="1.0"?>
<package format="3">
  <name>freyja_utils</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="aj@email.com">aj</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake_ros</buildtool_depend>
  <build_depend>Eigen3</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
