<?xml version="1.0"?>
<package format="3">
  <name>lqg_control</name>
  <version>2.0.0</version>
  <description>The lqg_control package</description>

  <maintainer email="ashankar@cse.unl.edu">aj</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>freyja_msgs</depend>
  
  <build_depend>Eigen3</build_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>
